<resources>
    <string name="app_name">DataApp</string>
    <string name="add_employee">Add Item</string>
    <string name="add_item">Add item</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_value">Enter Value</string>
    <string name="view_items">View Items</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="existing_user_try_signing_in">Already have an account?</string>
    <string name="default_value">Default Value</string>
    <string name="_500">500</string>
    <string name="delete">Delete</string>
    <string name="edit_item">Edit Item</string>
    <string name="input_name">Enter Name</string>
    <string name="input_value">Enter Value</string>
    <string name="update">Update</string>
    <string name="sign_in">Sign in</string>
</resources>